# rules_mrobotics

./: .bazelrc  .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  WORKSPACE  WORKSPACE.bazel
.devcontainer/: Dockerfile  devcontainer.json
aws/: s3.bzl
bundle/: README.md  app.bzl  defs.bzl  pkgfy.bzl
bundle/private/: BUILD  BUILD.bazel  ld_env.bzl
bundle/private/app/: app.bzl
bundle/private/bootstrap/: BUILD.bazel  bootstrap.bzl  bootstrap.tpl
bundle/private/pkgfy/: BUILD.bazel  package.py  pkgfy.bzl
cc/: BUILD.bazel  README.md  cc_toolchain_config.bzl  defs.bzl
cc/toolchain/clang/: BUILD.bazel  cc_toolchain_config.bzl
cuda/: README.md  device_deps.bzl
docker/: README.md
examples/: BUILD  README.md  WORKSPACE  WORKSPACE.bazel
examples/bundle/: BUILD
examples/cc/: BUILD.bazel
examples/go/: BUILD  go.mod  main.go
examples/proto/: BUILD.bazel  greeter.proto  thing.proto
examples/proto/python/: BUILD.bazel  server.py
examples/python/: BUILD.bazel  __main__.py
examples/python/internal/: BUILD  fastapi.py
examples/rust/: BUILD.bazel
examples/rust/example/: BUILD.bazel  Cargo.toml  main.rs
examples/typescript/: .gitkeep
go/: README.md  defs.bzl
pkg/: pkgfy.bzl
pkg/private/: package.py
proto/: README.md  defs.bzl
proto/private/python/: python_grpc_library.bzl
proto/private/rust/: BUILD.bazel  tonic.bzl  tonic_grpc_library.bzl
proto/python/: toolchain.bzl
proto/rust/: toolchain.bzl
proto/tonic/: BUILD.bazel  tonic.bzl
python/: README.md  defs.bzl
python/proto/: python_grpc_library.bzl
repo/: README.md  defs.bzl  s3.bzl
repo/private/: BUILD  patched_local_repository.bzl  s3-get  s3.bzl
rust/: README.md  defs.bzl
rust/ffi/: cxx_bridge.bzl
rust/proto/: BUILD.bazel  tonic.bzl
rust/proto/private/: BUILD.bazel
tools/: defs.bzl  hasura.bzl
tools/private/hasura/: BUILD.bazel  hasura.bzl  hasura_runner_template.sh  project.bzl  runner.bzl
utilities/app/: app.bzl
utilities/rust_cxx_bridge/: rust_cxx_bridge.bzl
