workspace(name = "rules_mrobotics")

load("//third_party:repositories.bzl", "load_repositories")

load_repositories()

load("//third_party:toolchains.bzl", "load_toolchains")

load_toolchains()

load("//third_party:workspace0.bzl", "init_workspace0")

init_workspace0()

load("//third_party:workspace1.bzl", "init_workspace1")

init_workspace1()
