load("@rules_rust//proto:toolchain.bzl", "rust_proto_toolchain")
load(":cc_toolchain_config.bzl", "cc_toolchain_config")
load("@rules_cc//cc:defs.bzl", "cc_toolchain")

rust_proto_toolchain(
    name = "rust_proto_toolchain_impl",
    edition = "2021",
    grpc_compile_deps = [
        "@crate_index//:prost",
        "@crate_index//:tonic",
    ],
    grpc_plugin = ":empty-file",
    proto_compile_deps = [
        "@crate_index//:prost",
    ],
    proto_plugin = ":empty-file",
    protoc = ":empty-file",
)

toolchain(
    name = "rust_proto_toolchain",
    toolchain = ":rust_proto_toolchain_impl",
    toolchain_type = "@rules_rust//proto:toolchain_type",
)

toolchain(
    name = "local_cc_toolchain",
    exec_compatible_with = [
        "@platforms//os:linux",
    ],
    toolchain = "local_cc_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "local_cc_toolchain_impl",
    all_files = ":empty-file",
    ar_files = ":empty-file",
    as_files = ":empty-file",
    compiler_files = ":empty-file",
    dwp_files = ":empty",
    linker_files = ":empty-file",
    module_map = ":empty-file",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":local_cc_toolchain_config",
    toolchain_identifier = "local",
)

cc_toolchain_config(
    name = "local_cc_toolchain_config",
    abi_libc_version = "local",
    abi_version = "local",
    compile_flags = [
        "-fstack-protector",
        "-Wall",
        "-Wthread-safety",
        "-Wself-assign",
        "-Wunused-but-set-parameter",
        "-Wno-free-nonheap-object",
        "-fcolor-diagnostics",
        "-fno-omit-frame-pointer",
    ],
    compiler = "clang",
    coverage_compile_flags = ["--coverage"],
    coverage_link_flags = ["--coverage"],
    cpu = "k8",
    cxx_builtin_include_directories = [
        "/usr/lib/llvm-17/lib/clang/17/include",
        "/usr/local/include",
        "/usr/include/x86_64-linux-gnu",
        "/usr/include",
        "/usr/lib/llvm-17/lib/clang/17/share",
        "/usr/include/c++/9",
        "/usr/include/x86_64-linux-gnu/c++/9",
        "/usr/include/c++/9/backward",
    ],
    cxx_flags = ["-std=c++14"],
    dbg_compile_flags = ["-g"],
    host_system_name = "local",
    link_flags = [
        "-fuse-ld=/usr/bin/ld.gold",
        "-Wl,-no-as-needed",
        "-Wl,-z,relro,-z,now",
        "-B/usr/lib/llvm-17/bin",
    ],
    link_libs = [
        "-lstdc++",
        "-lm",
    ],
    opt_compile_flags = [
        "-g0",
        "-O2",
        "-D_FORTIFY_SOURCE=1",
        "-DNDEBUG",
        "-ffunction-sections",
        "-fdata-sections",
    ],
    opt_link_flags = ["-Wl,--gc-sections"],
    supports_start_end_lib = True,
    target_libc = "local",
    target_system_name = "local",
    tool_paths = {
        "ar": "/usr/bin/ar",
        "ld": "/usr/bin/ld",
        "llvm-cov": "None",
        "llvm-profdata": "None",
        "cpp": "/usr/lib/llvm-17/bin/clang",
        "gcc": "/usr/lib/llvm-17/bin/clang",
        "dwp": "/usr/bin/dwp",
        "gcov": "None",
        "nm": "/usr/bin/nm",
        "objcopy": "/usr/bin/objcopy",
        "objdump": "/usr/bin/objdump",
        "strip": "/usr/bin/strip",
    },
    toolchain_identifier = "local",
    unfiltered_compile_flags = [
        "-no-canonical-prefixes",
        "-Wno-builtin-macro-redefined",
        "-D__DATE__=\"redacted\"",
        "-D__TIMESTAMP__=\"redacted\"",
        "-D__TIME__=\"redacted\"",
    ],
)

toolchain(
    name = "linux_aarch64_cross_cc_toolchain",
    exec_compatible_with = [
        "@platforms//cpu:x86_64",
        "@platforms//os:linux",
    ],
    target_compatible_with = [
        "@platforms//cpu:aarch64",
        "@platforms//os:linux",
    ],
    toolchain = ":linux_aarch64_cross_cc_toolchain_impl",
    toolchain_type = "@bazel_tools//tools/cpp:toolchain_type",
)

cc_toolchain(
    name = "linux_aarch64_cross_cc_toolchain_impl",
    all_files = ":empty-file",
    ar_files = ":empty-file",
    as_files = ":empty-file",
    compiler_files = ":empty-file",
    dwp_files = ":empty",
    linker_files = ":empty-file",
    module_map = ":empty-file",
    objcopy_files = ":empty",
    strip_files = ":empty",
    supports_param_files = 1,
    toolchain_config = ":linux_aarch64_cross_cc_toolchain_config",
    toolchain_identifier = "aarch64_cross",
)

cc_toolchain_config(
    name = "linux_aarch64_cross_cc_toolchain_config",
    abi_libc_version = "aarch64",
    abi_version = "aarch64",
    compile_flags = [
        "-fstack-protector",
        "-Wall",
        "-Wthread-safety",
        "-Wself-assign",
        "-Wunused-but-set-parameter",
        "-Wno-free-nonheap-object",
        "-fcolor-diagnostics",
        "-fno-omit-frame-pointer",
    ],
    compiler = "aarch64",
    coverage_compile_flags = ["--coverage"],
    coverage_link_flags = ["--coverage"],
    cpu = "aarch64",
    cxx_builtin_include_directories = [
        "/usr/lib/llvm-17/lib/clang/17/include",
        "/usr/aarch64-linux-gnu/include",
        "/usr/include/aarch64-linux-gnu",
        "/usr/lib/llvm-17/lib/clang/17/share",
        "/usr/aarch64-linux-gnu/include/c++/9",
        "/usr/aarch64-linux-gnu/include/c++/9/backward",
    ],
    cxx_flags = ["-std=c++14"],
    dbg_compile_flags = ["-g"],
    host_system_name = "aarch64",
    link_flags = [
        "-Wl,-no-as-needed",
        "-Wl,-z,relro,-z,now",
        "-B/usr/lib/llvm-17/bin",
    ],
    link_libs = [
        "-lstdc++",
        "-lm",
    ],
    opt_compile_flags = [
        "-g0",
        "-O2",
        "-D_FORTIFY_SOURCE=1",
        "-DNDEBUG",
        "-ffunction-sections",
        "-fdata-sections",
    ],
    opt_link_flags = ["-Wl,--gc-sections"],
    supports_start_end_lib = False,
    target_libc = "aarch64",
    target_platform = "aarch64-linux-gnu",
    target_system_name = "aarch64",
    tool_paths = {
        "ar": "/usr/bin/aarch64-linux-gnu-ar",
        "ld": "/usr/bin/aarch64-linux-gnu-ld",
        "llvm-cov": "None",
        "llvm-profdata": "None",
        "cpp": "/usr/lib/llvm-17/bin/clang",
        "gcc": "/usr/lib/llvm-17/bin/clang",
        "dwp": "/usr/bin/aarch64-linux-gnu-dwp",
        "gcov": "None",
        "nm": "/usr/bin/aarch64-linux-gnu-nm",
        "objcopy": "/usr/bin/aarch64-linux-gnu-objcopy",
        "objdump": "/usr/bin/aarch64-linux-gnu-objdump",
        "strip": "/usr/bin/aarch64-linux-gnu-strip",
    },
    toolchain_identifier = "aarch64",
    unfiltered_compile_flags = [
        "-no-canonical-prefixes",
        "-Wno-builtin-macro-redefined",
        "-D__DATE__=\"redacted\"",
        "-D__TIMESTAMP__=\"redacted\"",
        "-D__TIME__=\"redacted\"",
    ],
)

filegroup(
    name = "empty",
    srcs = [],
)

filegroup(
    name = "empty-file",
    srcs = [
        "an-empty-file",
    ],
)
