load("@rules_mrobotics//proto:defs.bzl", "go_proto_library", "proto_library", "python_grpc_library", "rust_grpc_library")

package(default_visibility = ["//visibility:public"])

proto_library(
    name = "thing_proto",
    srcs = [
        "thing.proto",
    ],
    deps = [
        "@com_google_protobuf//:any_proto",
    ],
)

proto_library(
    name = "greeter_grpc",
    srcs = [
        "greeter.proto",
    ],
    deps = [
        ":thing_proto",
        "@com_google_protobuf//:any_proto",
    ],
)

rust_grpc_library(
    name = "greeter_rust_grpc",
    protos = [
        "//proto:greeter_grpc",
        "//proto:thing_proto",
    ],
)

python_grpc_library(
    name = "thing_python_grpc",
    protos = [
        "thing_proto",
    ],
)

python_grpc_library(
    name = "greeter_python_grpc",
    protos = [
        "greeter_grpc",
        "thing_proto",
    ],
)

proto_library(
    name = "proto_proto",
    srcs = [
        "greeter.proto",
        "thing.proto",
    ],
    deps = ["@com_google_protobuf//:any_proto"],
)

go_proto_library(
    name = "proto_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "github.com/machanirobotics/rules_mrobotics_examples/proto",
    proto = ":proto_proto",
)
