load("@rules_mrobotics//python:defs.bzl", "python_grpc_library")

python_grpc_library(
    name = "thing_python_grpc",
    grpcio = "@rules_mrobotics_pip_grpcio//:pkg",
    protos = [
        "//examples/proto:thing_proto",
    ],
)

python_grpc_library(
    name = "greeter_python_grpc",
    grpcio = "@rules_mrobotics_pip_grpcio//:pkg",
    protos = [
        "//examples/proto:greeter_grpc",
    ],
)
