load("@rules_mrobotics//proto:defs.bzl", "rust_grpc_library")

rust_grpc_library(
    name = "greeter_rust_grpc",
    protos = [
        "//proto:greeter_grpc",
        "//proto:thing_proto",
    ],
    deps = [
        "@rules_mrobotics_examples_crate_index//:prost",
        "@rules_mrobotics_examples_crate_index//:prost-types",
        "@rules_mrobotics_examples_crate_index//:tonic",
    ],
)
