load("@rules_proto_grpc//:defs.bzl", "proto_plugin")

proto_plugin(
    name = "rust_prost_plugin",
    exclusions = [
        "google/protobuf",
    ],
    options = ["file_descriptor_set"],
    output_directory = True,
    tool = "@crate_index//:protoc-gen-prost-0.2.1__protoc-gen-prost",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "rust_tonic_plugin",
    exclusions = [
        "google/protobuf",
    ],
    options = ["no_include"],
    output_directory = True,
    tool = "@crate_index//:protoc-gen-tonic__protoc-gen-tonic",
    visibility = ["//visibility:public"],
)

proto_plugin(
    name = "rust_crate_plugin",
    exclusions = [
        "google/protobuf",
    ],
    options = ["no_features"],
    output_directory = True,
    tool = "@crate_index//:protoc-gen-prost-crate__protoc-gen-prost-crate",
    visibility = ["//visibility:public"],
)

sh_binary(
    name = "rust_fixer",
    srcs = ["rust_fixer.sh"],
    visibility = ["//visibility:public"],
)
